--- a/VladosMeetupPlatform/VladosMeetupPlatform.API/Properties/launchSettings.json
+++ b/VladosMeetupPlatform/VladosMeetupPlatform.API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7222;http://localhost:5222",
+      "applicationUrl": "https://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
