--- a/VladosMeetupPlatform/VladosMeetupPlatform.API/appsettings.Development.json
+++ b/VladosMeetupPlatform/VladosMeetupPlatform.API/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=MeetupDb;Username=postgres;Password=DbVKR4ca"
+    "DefaultDbConnection": "Host=localhost;Port=5432;Database=MeetupDb;Username=postgres;Password=DbVKR4ca"
   }
 }
