--- a/VladosMeetupPlatform/VladosMeetupPlatform.API/VladosMeetupPlatform.API.csproj
+++ b/VladosMeetupPlatform/VladosMeetupPlatform.API/VladosMeetupPlatform.API.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.2" />
+    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,7 +20,6 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
-    <Folder Include="ViewModels\Users\" />
   </ItemGroup>
 
 </Project>
